@@ -2,6 +2,8 @@
 
 Changes with Apache 2.3.12
 
+  *) WinNT MPM: Improve robustness under heavy load.  [Jeff Trawick]
+
   *) MinGW build improvements.  PR 49535.  [John Vandenberg 
      <jayvdb gmail.com>, Jeff Trawick]
 
